# coursework-6

./: README.md  pyproject.toml
config/: settings.py  urls.py
fixtures/: auth_data1.json  service_data1.json  users_data1.json
service/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
service/management/commands/: start_mailing.py
service/migrations/: 0001_initial.py  0002_initial.py  0003_remove_mailingattempt_client.py  0004_alter_blogpost_creator_alter_blogpost_image_and_more.py  0005_alter_mailing_options.py  0006_alter_blogpost_options.py
service/templates/service/: base.html  blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  mailingattempt_detail.html  mailingattempt_list.html  main.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
service/templates/service/includes/: inc_footer.html  inc_main_menu.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_is_banned.py  0003_alter_user_options.py
users/templates/users/: login.html  password_reset_email.html  register.html  user_form.html  user_list.html
